# img_converter

./: .gitignore  .ruff.toml  LICENSE  README.md  main.py  pyproject.toml
img_converter/: __init__.py  heic_2_png.py
